syntax = "proto3";

option go_package = "github.com/LagrangeDev/LagrangeGo/pkg/pb/service/oidb";

// FetchFriendRequests
message OidbSvcTrpcTcp0x5CF_11 {
  int32 Field1 = 1; // 1
  int32 Field3 = 3; // 6
  string SelfUid = 4;
  int32 Field5 = 5; // 0
  int32 Field6 = 6; // 80
  int32 Field8 = 8; // 2
  int32 Field9 = 9; // 0
  int32 Field12 = 12; // 1
  int32 Field22 = 22; //1
}
